# gilberts-yoga-helper

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/: __init__.py  cli.py  config.py  main.py
backend/database/: __init__.py  connection.py  crud.py  models.py
backend/scrapers/: __init__.py  aats.py  aebiwaffen.py  armashop.py  base.py  egun.py  ellie.py  gwmh.py  petitesannonces.py  renehild.py  vnsm.py  waffenboerse.py  waffengebraucht.py  waffenjoray.py  waffenzimmi.py
backend/services/: __init__.py  crawler.py  matching.py  telegram.py
backend/utils/: __init__.py  logging.py
deploy/: backup-database.sh  cron-daily-crawl  cron-weekly-backup  gebrauchtwaffen.service  gilberts-gun-crawler.service  update.sh
docs/stories/: crawl-progress-indicator.md
frontend/static/: manifest.json  sw.js
frontend/templates/: _base.html  dashboard.html
migrations/: README  env.py
migrations/versions/: 001_initial_schema.py  002_add_app_settings_table.py  003_add_exclude_terms_table.py  004_add_source_sort_order.py  005_add_crawl_logs_table.py  14ad29168b84_add_hide_seen_matches_to_search_terms.py  234087b03c66_add_is_favorite_to_matches.py  981cdbe59202_merge_branches.py  fd3a4370ed78_add_sort_order_to_search_terms.py
tests/: conftest.py  test_cli.py  test_deployment.py  test_main.py
tests/test_database/: test_connection.py  test_crud.py  test_migrations.py  test_models.py  test_new_match_detection.py
tests/test_routes/: test_crawl_admin.py  test_dashboard.py  test_search_terms_admin.py  (+1 more)
(+37 files in other folders)
