[tool.poetry]
name = "gilberts-yoga-helper"
package-mode = false
version = "0.1.0"
description = "Gilbert's Yoga Helper - personal web app for Raspberry Pi"
authors = ["Löli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.68.0,<0.100.0"
pydantic = "^1.10.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.0"
jinja2 = "^3.1.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.0"
alembic = "^1.9.0"
beautifulsoup4 = "^4.11.0"
lxml = "^4.9.0"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
